# galileo_toolkit

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.base  Dockerfile.toolkit  README.md  docker-compose-training.yml  docker-compose.yml
build_scripts/: docker-build-base.sh  docker-build-final.sh  docker-build-toolkit.sh  docker-push-final.sh  pytorch-build-env.sh
docker-compose-examples/: docker-compose-simple.yml
docs/: galileo_dashboard.md  galileo_proxy.md  galileo_toolkit.md  gnat_detect.md  gnat_flow.md  gnat_yaf.md
gnat/: Cargo.toml  build.rs  graph.sh  tag.json  tag.json.bak
gnat/src/: build.rs  lib.rs
gnat/src/core/: aggregate.rs  batch.rs  bin.rs  collect.rs  export.rs  import.rs  mod.rs  questdb.rs
gnat/src/ipfix/: export_parquet.c  export_parquet.h  import_libfixbuf.c  import_libfixbuf.h  io_context.h  libfixbuf.rs  mod.rs  yaf_record.h  yaf_template.h
gnat/src/model/: binning.rs  dashboard.sql  histogram.rs  table.rs
gnat/src/model/binning/: equal_frequency.rs  optimal_binner.rs
gnat/src/model/histogram/: histogram_model.rs  ipaddr_category.rs  number.rs  numeric_category.rs  string_category.rs  time_category.rs
gnat/src/model/table/: appid.rs  asn.rs  bytes.rs  country.rs  dns.rs  doh.rs  flow.rs  ip.rs  packets.rs  proto.rs  quic.rs  ssh.rs  vlan.rs  vpn.rs
gnat/src/pipeline/: aggregate.rs  aggregate_test.rs  batch.rs  batch_test.rs  cache.rs  collector.rs  export.rs  export_test.rs  hbos.rs  hbos_test.rs  import.rs  import_test.rs  merge.rs  merge_test.rs  metrics.rs  metrics_test.rs  model.rs  model_test.rs  rule.rs  rule_test.rs  sample.rs  sample_test.rs  split.rs  store.rs  stream.rs  tag.rs  tag_test.rs
gnat/src/utils/: duckdb.rs  filename.rs
gnat_ai/: Cargo.toml
gnat_ai/.cargo/: config.toml
gnat_ai/src/: lib.rs  main.rs
gnat_ai/src/models/: hbos.rs  memstream.rs  mod.rs
gnat_db/: Cargo.toml
gnat_db/src/: lib.rs  main.rs  questdb.rs
gnat_db/src/table/: all.rs  appid.rs  asn.rs  bytes.rs  country.rs  dns.rs  doh.rs  flow.rs  ip.rs  packets.rs  proto.rs  quic.rs  ssh.rs
gnat_detect/: Cargo.toml
gnat_detect/src/: galileo.rs  main.rs
gnat_detect/src/galileo/: feature.rs  (+1 more)
gnat_flow/: Cargo.toml  build.rs
gnat_flow/src/: galileo.rs  main.rs
gnat_flow/src/galileo/: collect.rs  export.rs  import.rs
gnat_flow/src/lib/: import_yaf.c  import_yaf.h
gnat_proxy/: Dockerfile
gnat_proxy/etc/: default.conf
gnat_proxy/scripts/: docker-build-nginx.sh  docker-push-nginx.sh
gnat_scripts/: entrypoint-gnat_aggregate.sh  entrypoint-gnat_batch.sh  entrypoint-gnat_cache.sh  entrypoint-gnat_collect.sh  entrypoint-gnat_db.sh  entrypoint-gnat_export.sh  entrypoint-gnat_hbos.sh  entrypoint-gnat_import.sh  entrypoint-gnat_merge.sh  entrypoint-gnat_metrics.sh  entrypoint-gnat_model.sh  entrypoint-gnat_rule.sh  entrypoint-gnat_sample.sh  entrypoint-gnat_sensor.sh  entrypoint-gnat_split.sh  entrypoint-gnat_store.sh  entrypoint-gnat_stream.sh  entrypoint-gnat_tag.sh  entrypoint-gnat_yaf.sh
sql_scripts/: hbos.sql  hive_query.sql
