[package]
name = "gnat"
version = "0.1.0"
edition = "2021"
authors = ["randy@galileonetworks.com"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
bindgen = "0.71.1"
pkg-config = "0.3.32"
cc = { version = "1.2.25", features = ["parallel"] }

[dependencies]
anyhow = "1.0.98"
c_string = "0.7.2"
clap = { version = "4.5.39", features = ["derive"] }
csv = "1.3.1"
duckdb = "1.2.2"
exitcode = "1.1.2"
libc = "0.2.172"
chrono = "0.4.41"
url = "2.5.4"
reqwest = { version = "0.12.19", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
byteorder = "1.5.0"
dotenv = "0.15.0"
