[package]
name = "gnat"
version = "0.1.0"
edition = "2021"
authors = ["randy@galileonetworks.com"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
bindgen = "0.72.0"
pkg-config = "0.3.32"
cc = { version = "1.2.32", features = ["parallel"] }

[dependencies]
anyhow = "1.0.99"
c_string = "0.7.2"
clap = { version = "4.5.45", features = ["derive"] }
csv = "1.3.1"
duckdb = "1.3.2"
exitcode = "1.1.2"
libc = "0.2.175"
chrono = "0.4.41"
url = "2.5.7"
reqwest = { version = "0.12.23", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
byteorder = "1.5.0"
dotenv = "0.15.0"
serde-jsonlines = "0.7.0"
