[package]
name = "gnat_db"
version = "0.1.0"
edition = "2021"
authors = ["randy@galileonetworks.com"]
readme = "README.md"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive"] }
duckdb = "1.0.0"
exitcode = "1.1.2"
questdb-rs = "4.0.3"
reqwest = { version = "0.12.7", features = ["blocking"] }
url = "2.5.2"

