[package]
name = "gnat_flow"
version = "0.1.0"
edition = "2021"
authors = ["randy@galileonetworks.com"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
bindgen = "0.70.1"
pkg-config = "0.3.30"
cc = { version = "1.0", features = ["parallel"] }

[dependencies]
anyhow = "1.0.86"
c_string = "0.7.2"
clap = { version = "4.5.9", features = ["derive"] }
csv = "1.3.0"
duckdb = "1.0.0"
exitcode = "1.1.2"
libc = "0.2"
questdb-rs = "4.0.3"
